# api-rate-limiter

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: __main__.py  limiter.py  main.py  settings.py
examples/: usage_examples.py
rate_limiter/: __init__.py  _locks.py  config.py  in_memory.py  redis_limiters.py  results.py
rate_limiter/lua/: sliding_window.lua  token_bucket.lua
scripts/: load_test.py
tests/: test_in_memory_sliding_window.py  test_in_memory_token_bucket.py
